tests/templates/misc/compile_fail/missing_reason.rs
use pre::pre;

#[pre("is foo")]
fn foo() {}

#[pre]
fn main() {
    #[assure("is foo")]
    foo()
}
